--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
 main {
   display: flex;
   align-items: flex-end; 
-  width: 90%;
+  width: 90vw;
   min-width: 800px;
   margin: 15vh auto;
   box-shadow: 0 0 15px LightGray;
@@ -58,7 +58,7 @@ main {
 
 #btn {
   cursor: pointer;
-  font-size: 24px;
+  font-size: 1em;
 }
 
 .stock {
@@ -78,12 +78,15 @@ h5 {
 
 .closebtn {
   color: Gray;
-  border: solid 1px Gray;
   border-radius: 100%;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   float: right;
   cursor: pointer;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+
 }
 
 #entry {
