--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-
+        
     <main>
       
         <div id="stock-list">
@@ -38,6 +38,7 @@
         </div>
       
         <div id="chart">
+          <div class="modal"></div>
         </div>
 
     </main>
